# DiffusionLab

./: .buildinfo  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  api.html  demo.py  generate_docs.py  genindex.html  index.html  llms-full.md  llms.md  llms.txt  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.claude/: settings.local.json
.github/workflows/: black.yml  docs.yml  formatting.yml  linting.yml  linting_formatting.yml  pytest.yml  testing.yml
_modules/: index.html
_modules/diffusionlab/: dynamics.html  losses.html  samplers.html  schedulers.html  vector_fields.html
_sources/: api.md.txt  index.md.txt
api/diffusions/: index.html
api/distributions/: index.html
api/losses/: index.html
api/models/: index.html
api/samplers/: index.html
api/schedulers/: index.html
api/utils/: index.html
api/vector_fields/: index.html
diffusionlab/: typing.py
diffusionlab/models/: __init__.py  base.py  components.py  dit.py  mlp.py
diffusionlab/processes/: base.py  discrete.py  gaussian.py  interpolation.py  simplicial.py
diffusionlab/sampling/: __init__.py  base.py  continuous.py  discrete.py  guidance.py  schedules.py
diffusionlab/training/: __init__.py  base.py  consistency.py  denoising.py  distillation.py  schedules.py  weighting.py
diffusionlab/utils/: tree_ops.py
docs/: conf.py  generate_docs.py  index.md
examples/: mnist_dit.py  mnist_multimodal.py  two_moons.py
search/: search_index.json
src/diffusionlab/: dynamics.py  loss.py  model.py  samplers.py  schedulers.py  (+2 more)
tests/: conftest.py
(+41 files in other folders)
